# python-package-templ

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
src/project_name/: main.py  test_main.py
